[gd_scene load_steps=11 format=4 uid="uid://chndrcxl56m26"]

[ext_resource type="Script" uid="uid://bdxjiuabgbca4" path="res://scripts/minigame2.gd" id="1_y0rby"]
[ext_resource type="AudioStream" uid="uid://bgalvw4eghu3w" path="res://assets/audio/bgm/falling_stars.ogg" id="2_jk64j"]
[ext_resource type="Texture2D" uid="uid://dtgst8ahegxt5" path="res://assets/img/tiles.png" id="2_lhedx"]
[ext_resource type="Texture2D" uid="uid://di387skstpt6c" path="res://assets/img/falling_stars_bg.png" id="2_qdnvj"]
[ext_resource type="PackedScene" uid="uid://chpkb0v4ng5id" path="res://scenes/star.tscn" id="3_jk64j"]
[ext_resource type="PackedScene" uid="uid://baevpgk7qx4at" path="res://scenes/player_minigame2.tscn" id="4_y0rby"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y0rby"]
texture = ExtResource("2_lhedx")
texture_region_size = Vector2i(50, 50)
7:0/0 = 0
8:0/0 = 0
7:1/0 = 0
8:1/0 = 0
8:2/0 = 0
7:2/0 = 0
6:2/0 = 0
6:0/0 = 0
6:1/0 = 0

[sub_resource type="TileSet" id="TileSet_272bh"]
tile_size = Vector2i(10, 10)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_y0rby")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lhedx"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jk64j"]
normal = Vector2(-1, 0)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_y0rby")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_jk64j")
autoplay = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = 1
texture_filter = 1
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAHAA4AAQAHAAAAAAAMAA4AAQAHAAAAAAARAA4AAQAHAAAAAAAWAA4AAQAHAAAAAAAbAA4AAQAIAAAAAAACAA4AAQAHAAAAAAD9/w4AAQAGAAAAAAACABMAAQAHAAEAAAAHABMAAQAHAAEAAAAMABMAAQAHAAEAAAARABMAAQAHAAEAAAAWABMAAQAHAAEAAAAbABMAAQAIAAEAAAD9/xMAAQAGAAEAAAA=")
tile_set = SubResource("TileSet_272bh")

[node name="RigidBody2D" parent="." instance=ExtResource("3_jk64j")]
position = Vector2(151, 136)

[node name="SpawnTimer" type="Timer" parent="."]

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Marker2D6" type="Marker2D" parent="SpawnPoints"]
position = Vector2(20, 20)

[node name="Marker2D7" type="Marker2D" parent="SpawnPoints"]
position = Vector2(122, 20)

[node name="Marker2D8" type="Marker2D" parent="SpawnPoints"]
position = Vector2(255, 24)

[node name="Marker2D9" type="Marker2D" parent="SpawnPoints"]
position = Vector2(386, 26)

[node name="Marker2D10" type="Marker2D" parent="SpawnPoints"]
position = Vector2(482, 25)

[node name="Marker2D16" type="Marker2D" parent="SpawnPoints"]
position = Vector2(576, 23)

[node name="Marker2D11" type="Marker2D" parent="SpawnPoints"]
position = Vector2(668, 22)

[node name="Marker2D12" type="Marker2D" parent="SpawnPoints"]
position = Vector2(763, 22)

[node name="Marker2D13" type="Marker2D" parent="SpawnPoints"]
position = Vector2(905, 23)

[node name="Marker2D14" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1024, 23)

[node name="Marker2D15" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1130, 21)

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="TimerLabel" type="Label" parent="."]
offset_left = 26.0
offset_top = 537.0
offset_right = 204.0
offset_bottom = 613.0
theme_override_font_sizes/font_size = 25

[node name="Player" parent="." instance=ExtResource("4_y0rby")]
position = Vector2(420.00003, 453)
scale = Vector2(3, 3)
SPEED = 300.0

[node name="LeftWall" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("WorldBoundaryShape2D_lhedx")

[node name="RightWall" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(1150, 0)
shape = SubResource("WorldBoundaryShape2D_jk64j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qdnvj")
expand_mode = 2
stretch_mode = 4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
